fixed the overflow

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -32,12 +32,12 @@ form {
 /*side navigator*/
 nav {
 	width: 100%;
-	position: sticky;
 	height: 30%;
 	top: 0px;
 	padding: 5px 5px;
 	z-index: 1;
 	opacity: 0.8;
+	overflow: auto;
 }
 
 
